# revel

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: lint.yml  pr.yml
example/: revel.yml
src/revel/: __init__.py  cli.py  config.py  machine.py  state.py
src/revel/machine/: __init__.py  machine.py  manager.py  state.py
src/revel/providers/: ssh.py
tests/: conftest.py  test_cli.py  test_config.py  test_machine.py
tests/mock/: full_config.yml
